--- a/src/css/components/_volume.scss
+++ b/src/css/components/_volume.scss
@@ -41,27 +41,37 @@
   left: 0;
 
   background-color: $primary-text;
+
+  @extend .vjs-icon-circle;
+
+  // Volume handle
+  &:before {
+    position: absolute;
+  }
 }
 
-.video-js .vjs-slider-vertical .vjs-volume-level { width: 0.3em; }
-.video-js .vjs-slider-horizontal .vjs-volume-level { height: 0.3em; }
+.video-js .vjs-slider-vertical .vjs-volume-level {
+  width: 0.3em;
 
-.video-js .vjs-volume-bar .vjs-volume-handle {
-  width: 0.8em;
-  height: 0.8em;
+  // Volume handle
+  &:before {
+    top: -0.5em;
+    left: -0.35em;
+  }
+}
+.video-js .vjs-slider-horizontal .vjs-volume-level {
+  height: 0.3em;
+
+  // Volume handle
+  &:before {
+    top: -0.35em;
+    right: -0.5em;
+  }
 }
 
-/* Assumes volume starts at 1.0. If you change the size of the
-handle relative to the volume bar, you'll need to update this value
-too. */
+/* Assumes volume starts at 1.0. */
 .video-js .vjs-volume-bar.vjs-slider-vertical .vjs-volume-level { height: 100%; }
-.video-js .vjs-volume-bar.vjs-slider-vertical .vjs-volume-handle { bottom: 4.3em; }
 .video-js .vjs-volume-bar.vjs-slider-horizontal .vjs-volume-level { width: 100%; }
-.video-js .vjs-volume-bar.vjs-slider-horizontal .vjs-volume-handle { left: 4.3em; }
-
-.video-js .vjs-volume-handle:before {
-  font-size: 0.9em;
-}
 
 /* The volume menu button is like menu buttons (captions/subtitles) but works
 a little differently. It needs to be possible to tab to the volume slider
