--- a/src/css/components/_layout.scss
+++ b/src/css/components/_layout.scss
@@ -45,19 +45,20 @@
 
 /* Fill the width of the containing element and use padding to create the
    desired aspect ratio. Default to 16x9 unless another ratio is given. */
+@mixin apply-aspect-ratio($width, $height) {
+  width: 100%;
+  max-width: 100%;
+  height: 0;
+  padding-top: 100% * ($height/$width);
+}
+
 .video-js.vjs-fluid,
 .video-js.vjs-16-9 {
-  width: 100%;
-  max-width:100%;
-  height: 0;
-  padding-top: 56.25%;
+  @include apply-aspect-ratio(16, 9);
 }
 
 .video-js.vjs-4-3 {
-  width: 100%;
-  max-width:100%;
-  height: 0;
-  padding-top: 75%;
+  @include apply-aspect-ratio(4, 3);
 }
 
 .video-js.vjs-fill {
