--- a/src/css/video-js.scss
+++ b/src/css/video-js.scss
@@ -25,6 +25,7 @@ $icon-font-path: 'font';
 @import "components/loading";
 @import "components/captions";
 @import "components/chapters";
+@import "components/descriptions";
 @import "components/subtitles";
 @import "components/adaptive";
 @import "components/captions-settings";
