--- a/src/css/video-js.less
+++ b/src/css/video-js.less
@@ -443,7 +443,7 @@ fonts to show/hide properly.
       background. Surprisingly works in IE8.
       Created using http://www.patternify.com
     Changing the first color value will change the bar color.
-    Also using a paralax effect to make the lines move backwards.
+    Also using a parallax effect to make the lines move backwards.
       The -50% left position makes that happen.
   */
   background: @slider-bar-color
