Switch over to using buttons instead of divs
refactored buttonText and got tests passing

refactor buttonText to controlText

--- a/src/css/video-js.scss
+++ b/src/css/video-js.scss
@@ -4,6 +4,7 @@
 @import "components/icons";
 @import "components/layout";
 @import "components/big-play";
+@import "components/button";
 @import "components/control-bar";
 @import "components/control";
 @import "components/progress";
