--- a/src/css/components/_big-play.scss
+++ b/src/css/components/_big-play.scss
@@ -1,12 +1,14 @@
 .video-js .vjs-big-play-button {
   font-size: 3em;
-  line-height: 1em;
+  line-height: 1.5em;
+  height: 1.5em;
+  width: 3em; // Firefox bug
   display: block;
   z-index: 2;
   position: absolute;
   top: 10px;
   left: 10px;
-  padding: 0.2em 1em;
+  padding: 0;
   cursor: pointer;
   opacity: 1;
   border: 2px solid $primary-text;
@@ -17,6 +19,17 @@
   @include transition(all 0.4s);
 
   @extend .vjs-icon-play;
+
+  // Since the big play button doesn't inherit from vjs-control, we need to specify a bit more than
+  // other buttons for the icon.
+  &:before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+  }
 }
 
 /* Hide if controls are disabled, the video is playing, or native controls are used. */
