refactored the buttons to use buildCSSClass instead of className
removing unnecessary localization

fixed the menu button css

Simplified controlText() and removed unnecessary override in MenuButton

--- a/src/css/components/_big-play.scss
+++ b/src/css/components/_big-play.scss
@@ -2,7 +2,7 @@
   font-size: 3em;
   line-height: 1.5em;
   height: 1.5em;
-  width: 3em; // Firefox bug
+  width: 3em; // Firefox bug: For some reason without width the icon wouldn't show up. Switched to using width and removed padding.
   display: block;
   z-index: 2;
   position: absolute;
