extend the same scss selector for both big play button and controls for the icon

--- a/src/css/_utilities.scss
+++ b/src/css/_utilities.scss
@@ -93,3 +93,12 @@
   -webkit-order: $value;
   order: $value;
 }
+
+%icon-default {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+}
