--- a/src/css/components/_control.scss
+++ b/src/css/components/_control.scss
@@ -7,17 +7,13 @@
   height: 100%;
   width: 4em;
   @include flex(none);
-}
 
-.video-js .vjs-control:before {
-  font-size: 1.8em;
-  line-height: 1.67;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  text-align: center;
+  &:before {
+    font-size: 1.8em;
+    line-height: 1.67;
+
+    @extend %icon-default;
+  }
 }
 
 /* Replacement for focus outline */
