--- a/src/css/components/_layout.scss
+++ b/src/css/components/_layout.scss
@@ -1,6 +1,8 @@
 .video-js {
-  /* inline-block is as close as we get to the video el's display:inline */
-  display: inline-block;
+  /* display:inline-block would be closer to the video el's display:inline
+   * but it results in flash reloading when going into fullscreen [#2205]
+   */
+  display: block;
   /* Make video.js videos align top when next to video elements */
   vertical-align: top;
   box-sizing: border-box;
