--- a/src/css/components/_big-play.scss
+++ b/src/css/components/_big-play.scss
@@ -1,12 +1,14 @@
 .video-js .vjs-big-play-button {
   font-size: 3em;
-  line-height: 1em;
+  line-height: 1.5em;
+  height: 1.5em;
+  width: 3em; // Firefox bug: For some reason without width the icon wouldn't show up. Switched to using width and removed padding.
   display: block;
   z-index: 2;
   position: absolute;
   top: 10px;
   left: 10px;
-  padding: 0.2em 1em;
+  padding: 0;
   cursor: pointer;
   opacity: 1;
   border: 2px solid $primary-text;
@@ -17,6 +19,12 @@
   @include transition(all 0.4s);
 
   @extend .vjs-icon-play;
+
+  // Since the big play button doesn't inherit from vjs-control, we need to specify a bit more than
+  // other buttons for the icon.
+  &:before {
+    @extend %icon-default
+  }
 }
 
 /* Hide if controls are disabled, the video is playing, or native controls are used. */
