--- a/src/css/video-js.scss
+++ b/src/css/video-js.scss
@@ -7,6 +7,7 @@
 @import "components/button";
 @import "components/control-bar";
 @import "components/control";
+@import "components/control-spacer";
 @import "components/progress";
 @import "components/slider";
 @import "components/volume";
