Removed the CDN publishing logic into it's own repo
See videojs/cdn#3

- Added a guide note about skipping analytics tracking on the CDN
- Updated videojs-font
- Added videojs-ie8 as a dependency
- Updated the examples directory URLs and added to dist
- Updated CSS to override font path

--- a/src/css/video-js.scss
+++ b/src/css/video-js.scss
@@ -1,6 +1,7 @@
 @import "variables";
 @import "utilities";
 
+$icon-font-path: 'font';
 @import "../../node_modules/videojs-font/scss/icons";
 
 @import "components/layout";
