--- a/src/css/video-js.less
+++ b/src/css/video-js.less
@@ -1,8 +1,8 @@
- /*!
-Video.js Default Styles (http://videojs.com)
-Version GENERATED_AT_BUILD
-Create your own skin at http://designer.videojs.com
-*/
+/**
+ * Video.js Default Styles (http://videojs.com)
+ * Version GENERATED_AT_BUILD
+ * Create your own skin at http://designer.videojs.com
+ */
 
 // To customize the player skin, change the values of the variables or edit the
 // CSS below.
