--- a/src/css/components/_time.scss
+++ b/src/css/components/_time.scss
@@ -5,5 +5,6 @@
 }
 
 /* We need the extra specificity that referencing .vjs-no-flex provides. */
+.video-js .vjs-current-time, .video-js.vjs-no-flex .vjs-current-time { display: none; }
 .video-js .vjs-duration, .video-js.vjs-no-flex .vjs-duration { display: none; }
 .vjs-time-divider { display: none; line-height: 3em; }
