--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -7,5 +7,9 @@ $secondary-bg: lighten($primary-bg, 35%);
 $text-font-family: Arial, Helvetica, sans-serif;
 $base-font-size: 10px;
 
-$control-bar-bg: #2B333F;
-$control-bar-transparency: 0.5;
+$control-bar--bg: #2B333F;
+$control-bar--transparency: 0.5;
+
+$big-play-button--width: 3em;
+$big-play-button--height: 1.5em;
+$big-play-button--transparency: 0.8;
