--- a/src/css/components/_volume.scss
+++ b/src/css/components/_volume.scss
@@ -24,6 +24,10 @@
   @include display-flex(center);
 }
 
+.video-js .vjs-volume-bar {
+  margin: 1.3em;
+}
+
 .video-js .vjs-volume-bar.vjs-slider-horizontal {
   width: 5em;
   height: 0.3em;
@@ -32,7 +36,6 @@
 .video-js .vjs-volume-bar.vjs-slider-vertical {
   width: 0.3em;
   height: 5em;
-  margin: 1.3em;
 }
 
 .video-js .vjs-volume-level {
@@ -82,8 +85,13 @@ width and height to zero. */
   display: block;
   width: 0;
   height: 0;
-  left: 0.5em;
   border-top-color: transparent;
+}
+.video-js .vjs-volume-menu-button.vjs-volume-menu-button-vertical .vjs-menu {
+  left: 0.5em;
+}
+.video-js .vjs-volume-menu-button.vjs-volume-menu-button-horizontal .vjs-menu {
+  left: -2em;
 }
 
 .video-js .vjs-menu-button.vjs-volume-menu-button .vjs-menu .vjs-menu-content {
@@ -100,10 +108,17 @@ width and height to zero. */
   // border-top-color: rgba(7, 40, 50, 0.5); /* Same as ul background */
 }
 
-.video-js .vjs-volume-menu-button:hover .vjs-menu .vjs-menu-content,
-.video-js .vjs-volume-menu-button .vjs-menu.vjs-lock-showing .vjs-menu-content {
+.video-js .vjs-volume-menu-button.vjs-volume-menu-button-vertical:hover .vjs-menu .vjs-menu-content,
+.video-js .vjs-volume-menu-button.vjs-volume-menu-button-vertical .vjs-menu.vjs-lock-showing .vjs-menu-content {
   height: 8em;
   width: 2.9em;
+}
+
+
+.video-js .vjs-volume-menu-button.vjs-volume-menu-button-horizontal:hover .vjs-menu .vjs-menu-content,
+.video-js .vjs-volume-menu-button.vjs-volume-menu-button-horizontal .vjs-menu.vjs-lock-showing .vjs-menu-content {
+  height: 2.9em;
+  width: 8em;
 }
 
 // By default, all menu items are shown, but we hide .vjs-mute-control and .vjs-volume-control
