--- a/src/css/components/_layout.scss
+++ b/src/css/components/_layout.scss
@@ -86,7 +86,7 @@ body.vjs-full-window {
   /* Fix for IE6 full-window. http://www.cssplay.co.uk/layouts/fixed.html */
   overflow-y: auto;
 }
-.video-js.vjs-fullscreen {
+.vjs-full-window .video-js.vjs-fullscreen {
   position: fixed;
   overflow: hidden;
   z-index: 1000;
@@ -94,6 +94,8 @@ body.vjs-full-window {
   top: 0;
   bottom: 0;
   right: 0;
+}
+.video-js.vjs-fullscreen {
   width: 100% !important;
   height: 100% !important;
   /* Undo any aspect ratio padding for fluid layouts */
