--- a/src/css/video-js.scss
+++ b/src/css/video-js.scss
@@ -7,13 +7,19 @@ $icon-font-path: 'font';
 @import "components/layout";
 @import "components/big-play";
 @import "components/button";
+
 @import "components/control-bar";
 @import "components/control";
 @import "components/control-spacer";
+
 @import "components/progress";
 @import "components/slider";
 @import "components/volume";
-@import "components/menu";
+
+@import "components/menu/menu";
+@import "components/menu/menu-popup";
+@import "components/menu/menu-inline";
+
 @import "components/poster";
 @import "components/live";
 @import "components/time";
