add comment about volume-specific style in inline

--- a/src/css/components/menu/_menu-inline.scss
+++ b/src/css/components/menu/_menu-inline.scss
@@ -25,6 +25,7 @@
 
 // Hover state
 .video-js .vjs-menu-button-inline:hover {
+  // This width is currently specific to the inline volume bar.
   width: 10em;
 }
 
