--- a/src/css/components/_slider.scss
+++ b/src/css/components/_slider.scss
@@ -3,6 +3,7 @@
   position: relative;
   cursor: pointer;
   padding: 0;
+  margin: 0 0.45em 0 0.45em;
 
   @include background-color-with-alpha($secondary-bg, 0.9);
 }
