fixed issues in IE8

--- a/src/css/components/_volume.scss
+++ b/src/css/components/_volume.scss
@@ -91,7 +91,7 @@ width and height to zero. */
 .video-js .vjs-volume-menu-button.vjs-volume-menu-button-vertical .vjs-menu {
   left: 0.5em;
 }
-.video-js .vjs-volume-menu-button.vjs-volume-menu-button-horizontal .vjs-menu {
+.video-js .vjs-volume-menu-button-popup.vjs-volume-menu-button-horizontal .vjs-menu {
   left: -2em;
 }
 
